[package]
name = "image_process"
version = "0.1.0"
authors = ["Romain FRIOT <friotromain@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.image]
version = "0.24.1"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]

[dependencies]
chrono = "0.4"
base64 = "0.13.0"
log = "0.4.16"
console_log = { version = "0.2", optional = true, features = ["color"] }
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
cfg-if = "1.0.0"
imageproc = "0.23.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[features]
# default = ["console_error_panic_hook" ,"wee_alloc"]
default = ["console_error_panic_hook", "console_log"]